WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
101869
assertion failure in JSObject::tryGetIndexQuickly()
https://bugs.webkit.org/show_bug.cgi?id=101869
Summary
assertion failure in JSObject::tryGetIndexQuickly()
Michael Pruett
Reported
2012-11-11 15:49:34 PST
Currently JSObject::tryGetIndexQuickly() triggers an assertion failure when the indexing type of an object is ArrayWithUndecided. This case is currently not handled but should be treated the same as a blank indexing type.
Attachments
Fix assertion failure in JSObject::tryGetIndexQuickly()
(1.31 KB, patch)
2012-11-11 16:01 PST
,
Michael Pruett
fpizlo
: review+
Details
Formatted Diff
Diff
Fix assertion failure in JSObject::tryGetIndexQuickly()
(3.27 KB, patch)
2012-11-11 22:19 PST
,
Michael Pruett
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Michael Pruett
Comment 1
2012-11-11 16:01:02 PST
Created
attachment 173521
[details]
Fix assertion failure in JSObject::tryGetIndexQuickly()
Filip Pizlo
Comment 2
2012-11-11 16:02:44 PST
Comment on
attachment 173521
[details]
Fix assertion failure in JSObject::tryGetIndexQuickly() If it was possible to add a test case to LayoutTests, then that would be super awesome. R=me for the patch as-is and RS=me for a test.
Filip Pizlo
Comment 3
2012-11-11 16:09:50 PST
Btw, if you want to land the patch then set 'cq' to '?'.
Michael Pruett
Comment 4
2012-11-11 22:19:37 PST
Created
attachment 173556
[details]
Fix assertion failure in JSObject::tryGetIndexQuickly() I've updated the original patch with a test case.
WebKit Review Bot
Comment 5
2012-11-11 23:49:43 PST
Comment on
attachment 173556
[details]
Fix assertion failure in JSObject::tryGetIndexQuickly() Clearing flags on attachment: 173556 Committed
r134193
: <
http://trac.webkit.org/changeset/134193
>
WebKit Review Bot
Comment 6
2012-11-11 23:49:46 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug