Fix assertion failure in JSObject::tryGetIndexQuickly() https://bugs.webkit.org/show_bug.cgi?id=101869

Patch by Michael Pruett <michael@68k.org> on 2012-11-11
Reviewed by Filip Pizlo.

Source/JavaScriptCore:

Currently JSObject::tryGetIndexQuickly() triggers an assertion
failure when the object has an undecided indexing type. This
case should be treated the same as a blank indexing type.

* runtime/JSObject.h:
(JSC::JSObject::tryGetIndexQuickly):

LayoutTests:

Add test case for an assertion failure triggered when constructing
a Blob with a sparse array.

* fast/constructors/blob-sparse-array-assertion-failure.html: Added.

Canonical link: https://commits.webkit.org/119964@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134193 268f45cc-cd09-0410-ab3c-d52691b4dbfc